GridView lists all files, created file item, and got TTS working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="voice">Voice</string>
     <string name="feature_title">Features</string>
     <string name="gallery_title">Gallery</string>
+    <string name="sort_by">Sort by: </string>
+    <string name="file_image">File image</string>
 </resources>
