--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="gallery_title">Gallery</string>
     <string name="sort_by">Sort by: </string>
     <string name="file_image">File image</string>
+    <string name="view_image">View image</string>
 </resources>
