--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="sort_by">Sort by: </string>
     <string name="file_image">File image</string>
     <string name="view_image">View image</string>
+    <string name="menu_button">Menu button</string>
 </resources>
